# AutonomDS-MultiAgent-AI-platform-for-data-analytics

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
MagicMock/mock.log_file/: 5668801568  5871602048
app/agents/: base_agent.py  cleaning_agent.py  eda_agent.py  evaluation_agent.py  explainability_agent.py  feature_engineering_agent.py  ingestion_agent.py  memory_agent.py  model_selection_agent.py  report_agent.py  training_agent.py
app/api/: main.py  schemas.py
app/api/routes/: experiments.py  pipeline.py  reports.py  upload.py
app/frontend/: streamlit_app.py
app/frontend/.streamlit/: secrets.toml.example
app/frontend/pages/: eda_page.py  experiments_page.py  home.py  models_page.py  pipeline_page.py  reports_page.py  upload_page.py
app/frontend/styles/: theme.py
app/memory/: chroma_store.py  embeddings.py  experiment_memory.py
app/models/: __init__.py
app/monitoring/: __init__.py  mlflow_tracker.py
app/orchestration/: graph.py  state.py
app/rag/: __init__.py  retrieval.py
app/tools/: __init__.py  data_tools.py
app/utils/: config.py  helpers.py  logger.py  validators.py
deployment/: render.yaml
deployment/.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
docs/: agent_design.md  architecture.md  deployment.md  implementation_plan.md  implementation_plan_with-rag.md  project_explanation_part1.md  project_explanation_part2.md  rag_system.md
docs/GUIDES/: free_deployment_guide.md  task.md  walkthrough.md
notebooks/: README.md
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_cleaning_agent.py  test_eda_agent.py  test_ingestion_agent.py  test_memory.py  test_orchestration.py  test_training_agent.py
