[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autonomous-ds-agent"
version = "1.0.0"
description = "Autonomous Multi-Agent Data Science Research Platform"
authors = [{ name = "AutonomDS Team" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "data-science", "multi-agent", "llm", "automl", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/your-org/autonomous-ds-agent"
Repository = "https://github.com/your-org/autonomous-ds-agent"

[project.scripts]
autonomds-api = "app.api.main:run"
autonomds-frontend = "app.frontend.streamlit_app:run"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "PT"]
ignore = ["ANN101", "ANN102", "ANN201", "ANN202", "ANN204", "B008"]
exclude = ["migrations/", "notebooks/", ".venv/"]

[tool.ruff.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
exclude = ["notebooks/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html:coverage_report"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/frontend/*", "tests/*"]
